--- a/templates/students.html
+++ b/templates/students.html
@@ -3,43 +3,43 @@
 <head>
 <title>Bootstrap 101 Template</title>
 <!-- Bootstrap -->
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Dream On</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <!-- <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li> -->
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">Dream On</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="active"><a href="#">Home</a></li>
+          <!-- <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li> -->
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
+</div>
+
+<div class="container">
+
+    <h1>Dream On</h1>
+    <p>Select a student</p>
+    <div class="row">
+        {% for student in students %}
+        <div class="span6"><a href="#teacher">{{student.name.firstName}} {{student.name.lastSurname}}</a></div>
+        <div class="span3"><a href="#student">student view</a></div>
+        {% endfor %}
     </div>
 
-    <div class="container">
-
-        <h1>Dream On</h1>
-        <p>Select a student</p>
-        <div class="row">
-            {% for student in students %}
-            <div class="span6"><a href="#teacher">{{student.name.firstName}} {{student.name.lastSurname}}</a></div>
-            <div class="span3"><a href="#student">student view</a></div>
-            {% endfor %}
-        </div>
-
-    </div> <!-- /container -->
+</div> <!-- /container -->
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
 </body>
 </html>
