--- a/templates/students.html
+++ b/templates/students.html
@@ -29,7 +29,7 @@
 <div class="container">
     <div class="hero-unit">
         <h1>Dream On</h1>
-        <p>Select a student</p>
+        <p>Intervene to aid student engagement by communicating about dreams.</p>
     </div>
     <div class="row">
         {% for student in students %}
