--- a/templates/assist.html
+++ b/templates/assist.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block navli %}
 <li><a href="/">Home</a></li>
-<li class="active"><a href="/assist/{{student.id}}">{{student.name.firstName}}</a></li>
-<li><a href="/suggest/{{student.id}}"></a></li>
+<li><a href="/assist/{{student.id}}">{{student.name.firstName}} {{student.name.lastSurname}}</a></li>
+<li class="active"><a href="/suggest/{{student.id}}">Suggest Resources</a></li>
 {% endblock %}
 {% block content %}
 <div class="hero-unit">
