--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 <title>Bootstrap 101 Template</title>
 <!-- Bootstrap -->
-<link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -30,6 +30,6 @@
 </div> <!-- /container -->
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
