--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bootstrap 101 Template</title>
+<title>Dream On</title>
 <!-- Bootstrap -->
 <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
