--- a/templates/courses.html
+++ b/templates/courses.html
@@ -9,7 +9,7 @@
     <h1>Courses</h1>
     <p>Courses!</p>
 </div>
-<form>
+<form method="post">
     {% for course in courses %}
     <div class="row">
         <div class="span7">
