--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" style="padding-top: 3em;">
   {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
