--- a/templates/assist.html
+++ b/templates/assist.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 <div class="hero-unit">
-    <h1>{% if length(journey) > 0 %}{{journey[0].accomplishment}}{% else %}Still dreaming...{% endif %}</h1>
-    <p><a href="/step/{{student.id}}">{% if length(journey) > 0 %}Continue{% else %}Start{% endif %} the journey.</a></p>
+    <h1>{% if journey %}{{journey[0].accomplishment}}{% else %}Still dreaming...{% endif %}</h1>
+    <p><a href="/step/{{student.id}}">{% if journey %}Continue{% else %}Start{% endif %} the journey.</a></p>
 </div>
 {% endblock %}
