--- a/templates/courses.html
+++ b/templates/courses.html
@@ -3,6 +3,7 @@
 <li><a href="/">Home</a></li>
 <li><a href="/assist/{{student.id}}">{{student.name.firstName}} {{student.name.lastSurname}}</a></li>
 <li class="active"><a href="/suggest/{{student.id}}">Suggest Resources</a></li>
+<li><a href="/step/{{student.id}}">Step</a></li>
 {% endblock %}
 {% block content %}
 <div class="hero-unit">
