--- a/templates/step.html
+++ b/templates/step.html
@@ -9,6 +9,6 @@
 <form>
     <h1>{{prompt}}</h1>
     {% if goal %}<h2>{{goal}}</h2>{% endif %}
-    <textarea></textarea>
+    <textarea cols="80" rows="8"></textarea>
 </form>
 {% endblock %}
