--- a/templates/step.html
+++ b/templates/step.html
@@ -9,6 +9,6 @@
 <form>
     <h1>{{prompt}}</h1>
     {% if goal %}<h2>{{goal}}</h2>{% endif %}
-    <textarea cols="200" rows="5"></textarea>
+    <textarea style="width: 20em; height: 4em;"></textarea>
 </form>
 {% endblock %}
