--- a/templates/step.html
+++ b/templates/step.html
@@ -6,9 +6,12 @@
 <li class="active"><a href="/step/{{student.id}}">Step</a></li>
 {% endblock %}
 {% block content %}
-<form>
+<form method="post">
     <h1>{{prompt}}</h1>
     {% if goal %}<h2>{{goal}}</h2>{% endif %}
-    <textarea style="width: 30em; height: 6em;"></textarea>
+    <textarea name="accomplishment" style="width: 30em; height: 6em;"></textarea>
+    <h1>And what will you do next?</h1>
+    <textarea name="prompt" style="width: 30em; height: 6em;"></textarea>
+    <input type="submit" value="Dream" />
 </form>
 {% endblock %}
