--- a/templates/step.html
+++ b/templates/step.html
@@ -7,11 +7,11 @@
 {% endblock %}
 {% block content %}
 <form method="post">
+    {% if goal %}<h3><em>{{goal}}</em></h3>{% endif %}
     <h1>{{prompt}}</h1>
-    {% if goal %}<h2>{{goal}}</h2>{% endif %}
     <textarea name="accomplishment" style="width: 30em; height: 6em;"></textarea>
     <h1>And what will you do next?</h1>
     <textarea name="prompt" style="width: 30em; height: 6em;"></textarea>
-    <input type="submit" value="Dream" />
+    <br /> <input type="submit" value="Dream" />
 </form>
 {% endblock %}
